<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".title"
    android:weightSum="1">

    <!-- Title Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/title_text1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/title_text2" />

    <!-- Title RSP Images -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/rock"
            android:contentDescription="@string/image_rock" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/scissors"
            android:contentDescription="@string/image_scissors" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/paper"
            android:contentDescription="@string/image_paper" />
    </LinearLayout>

    <!-- High Score Text -->
    <TextView
        android:id="@+id/text_highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:text="@string/high_score" />

    <!-- Bottom Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom">

        <Button
            android:id="@+id/button_start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/title_start_button"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_design" />
    </LinearLayout>

</LinearLayout>
