<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".game_main"
    android:weightSum="1">

    <!-- Score Text -->
    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="30sp"
        android:text="@string/score" />

    <LinearLayout
        android:id="@+id/layout_rest_images"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

    </LinearLayout>

    <!-- Game Main text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:text="@string/game_main_text1" />

    <!-- Battle Layout -->
    <LinearLayout
        android:id="@+id/layout_battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp" />


    <!-- Bottom button -->
    <LinearLayout
        android:id="@+id/layout_bottom_hands"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|bottom">

        <ImageView
            android:id="@+id/image_rock"
            android:layout_width="@dimen/hand_image_wh"
            android:layout_height="@dimen/hand_image_wh"
            android:src="@drawable/rock"
            android:contentDescription="@string/image_rock" />

        <ImageView
            android:id="@+id/image_scissors"
            android:layout_width="@dimen/hand_image_wh"
            android:layout_height="@dimen/hand_image_wh"
            android:layout_marginLeft="@dimen/rsp_images_margin"
            android:src="@drawable/scissors"
            android:contentDescription="@string/image_scissors" />

        <ImageView
            android:id="@+id/image_paper"
            android:layout_width="@dimen/hand_image_wh"
            android:layout_height="@dimen/hand_image_wh"
            android:layout_marginLeft="@dimen/rsp_images_margin"
            android:src="@drawable/paper"
            android:contentDescription="@string/image_paper" />

    </LinearLayout>

</LinearLayout>
